Landing all done

--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>Colla Color</title>
-
+  <meta name="author" content="David Chen and Simon Wu" />
+  <meta name="description" content="Collaborative Coloring App" />
   <meta charset="utf-8" />
   <meta
     name="viewport"
